# sdkms-client-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
create_dataset/: Cargo.toml
create_dataset/src/: main.rs
examples/: approval_request.rs  crud.rs  encrypt_decrypt.rs  get_user.rs  invoke_plugin.rs  plugin_approval_request.rs  session.rs  sign_verify.rs
src/: api_model.rs  client.rs  lib.rs  macros.rs  operations.rs
src/client/: common.rs  impl_async.rs  impl_blocking.rs  mod.rs
