[package]
name = "sdkms"
version = "0.2.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
API bindings for Fortanix SDKMS
"""
readme = "README.md"
repository = "https://github.com/fortanix/sdkms-client-rust"
documentation = "https://docs.rs/sdkms"
homepage = "https://fortanix.com/products/sdkms/"
categories = ["api-bindings"]

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.10"
uuid = { version = "0.6.3", features = ["v4", "serde"] }
rustc-serialize = "0.3"
bitflags = "1.0"
url = "1.7"
log = "0.4"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
hyper-native-tls = { version = "0.3" }

[target.'cfg(target_env = "sgx")'.dependencies]
mbedtls-hyper = { git = "https://github.com/fortanix/rust-mbedtls.git", branch = "acruceru/wip-mbed-hyper-v2", default-features = false, features = ["sgx"] }
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls.git", branch = "acruceru/wip-mbed-hyper-v2", default-features = false, features = ["sgx"]}

[patch.crates-io]
rustc-serialize = { git = "https://github.com/jethrogb/rustc-serialize.git", branch = "portability" }

[dev-dependencies]
rand = "0.6"