[package]
name = "sdkms"
version = "0.3.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
API bindings for Fortanix DSM (a.k.a. Fortanix SDKMS)
"""
readme = "README.md"
repository = "https://github.com/fortanix/sdkms-client-rust"
documentation = "https://docs.rs/sdkms"
homepage = "https://fortanix.com/products/sdkms/"
categories = ["api-bindings"]
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["simple-hyper-client/native-tls", "tokio-native-tls"]

[dependencies]
base64 = "0.13"
bitflags = "1.0"
headers = "0.3.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-hyper-client = "0.1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio-native-tls = { version = "0.3", optional = true }
url = "1.7"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
env_logger = "0.6"
rand = "0.6"
