[package]
name = "sdkms"
version = "0.2.1"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
API bindings for Fortanix SDKMS
"""
readme = "README.md"
repository = "https://github.com/fortanix/sdkms-client-rust"
documentation = "https://docs.rs/sdkms"
homepage = "https://fortanix.com/products/sdkms/"
categories = ["api-bindings"]

[features]
default = ["hyper-native-tls"]

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper-native-tls = { version = "0.3", optional = true }
hyper = "0.10"
uuid = { version = "1.0", features = ["serde", "v4"] }
rustc-serialize = "0.3"
bitflags = "1.0"
url = "1.7"
log = "0.4"

[dev-dependencies]
env_logger = "0.6"
rand = "0.6"
