[workspace]

[package]
name = "dataset"
version = "0.1.0"
authors = ["Adrian Cruceru <adrian.cruceru@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdkms = { path = "../" }
rand = "0.6"
uuid = { version = "0.6.3", features = ["v4", "serde"] }
serde_json = "1.0"
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls.git", branch = "acruceru/mbed-hyper", default-features = false, features = ["sgx"]}
mbedtls-hyper = { git = "https://github.com/fortanix/rust-mbedtls.git", branch = "acruceru/mbed-hyper", default-features = false, features = ["sgx"]}
hyper = "0.10"

[patch.crates-io]
rustc-serialize = { git = "https://github.com/jethrogb/rustc-serialize.git", branch = "portability" }
